--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <link rel="apple-touch-icon" href="favicon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta property='og:title' content='TBlocks'>
+<meta property='og:image' content='https://trashbots.github.io/tblocks/images/TBlocksLinkImage.png'>
+<meta property='og:description' content='TBlocks building workspace'>
+<meta property='og:url' content='https://trashbots.github.io/tblocks' >
 <!--link rel="apple-touch-startup-image" href="/launch.png"-->
 <html>
 <head>
@@ -20,11 +24,7 @@
   <title>TeakBlocks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-  <!--link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"-->
   <link rel="stylesheet" href="style.css">
-  <!-- <link rel="stylesheet" href="teak/css/night_blue.css"> -->
-  <link rel="stylesheet" href="css/day_blue.css">
-  <!-- <link rel="stylesheet" href="teak/css/banana.css"> -->
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
