--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta property='og:title' content='TBlocks'>
+<meta property='og:type' content='website'>
 <meta property='og:image' content='https://trashbots.github.io/tblocks/images/TBlocksLinkImage.png'>
 <meta property='og:description' content='TBlocks building workspace'>
 <meta property='og:url' content='https://trashbots.github.io/tblocks' >
@@ -21,7 +22,7 @@
   <audio id='short-click' src='sounds/short-click.m4a'></audio>
   <audio id='poof' src='sounds/poof.m4a'></audio>
   <audio id='drop' src='sounds/drop.m4a'></audio>
-  <title>TeakBlocks</title>
+  <title>TBlocks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
