--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta property='og:title' content='TBlocks'>
 <meta property='og:type' content='website'>
-<meta property='og:image' content='https://trashbots.github.io/tblocks/images/TBlocksLinkImage.png'>
+<meta property='og:image' content='https://trashbots.github.io/tblocks/images/TBlocksLinkImage.jpg'>
 <meta property='og:description' content='TBlocks building workspace'>
 <meta property='og:url' content='https://trashbots.github.io/tblocks' >
 <!--link rel="apple-touch-startup-image" href="/launch.png"-->
