--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <link rel="apple-touch-icon" href="favicon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
 <meta property='og:title' content='TBlocks'>
 <meta property='og:type' content='website'>
 <meta property='og:image' content='https://trashbots.github.io/tblocks/images/TBlocksLinkImage.jpg'>
 <meta property='og:description' content='TBlocks building workspace'>
 <meta property='og:url' content='https://trashbots.github.io/tblocks' >
+
+<meta name="twitter:title" content="TBlocks ">
+<meta name="twitter:description" content=" TBlocks building workspace">
+<meta name="twitter:image" content=" https://trashbots.github.io/tblocks/images/TBlocksLinkImage.jpg">
+<meta name="twitter:card" content="summary_large_image">
+
 <!--link rel="apple-touch-startup-image" href="/launch.png"-->
 <html>
 <head>
