--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 <meta property='og:type' content="website">
-<meta property='og:title' content="TBlocks">
-<meta property='og:description' content="TBlocks building workspace">
-<meta property='og:image' content="https://trashbots.github.io/tblocks/images/TBlocksLinkImage.jpg">
+<meta name="title" property="og:title" content="TBlocks">
+<meta name="description" property="og:description" content="TBlocks building workspace">
+<meta name="image" property="og:image" content="https://trashbots.github.io/tblocks/images/TBlocksLinkImage.jpg">
 <meta property='og:image:width' content:"1280">
 <meta property='og:image:height' content:"680">
 <meta property='og:url' content='https://trashbots.github.io/tblocks' >
-
+<meta name="author" content="Paul Austin">
 <meta name="twitter:title" content="TBlocks ">
 <meta name="twitter:description" content=" TBlocks building workspace">
 <meta name="twitter:image" content=" https://trashbots.github.io/tblocks/images/TBlocksLinkImage.jpg">
