--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
+<meta property="og:type" content="website">
+<meta name="title" property="og:title" content="TBlocks">
+<meta name="description" property="og:description" content="TBlocks building workspace">
+<meta name="image" property="og:image" content="https://trashbots.github.io/tblocks/images/TBlocksLinkImage.jpg">
+<meta property="og:url" content="https://trashbots.github.io/tblocks">
+<meta name="author" content="Paul Austin">
+<meta name="twitter:title" content="TBlocks ">
+<meta name="twitter:description" content="TBlocks building workspace">
+<meta name="twitter:image" content="https://trashbots.github.io/tblocks/images/TBlocksLinkImage.jpg">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="icon" type="image/png" href="favicon.png">
 <link rel="apple-touch-icon" href="favicon.png">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-<meta property='og:type' content="website">
-<meta name="title" property="og:title" content="TBlocks">
-<meta name="description" property="og:description" content="TBlocks building workspace">
-<meta name="image" property="og:image" content="https://trashbots.github.io/tblocks/images/TBlocksLinkImage.jpg">
-<meta property='og:image:width' content:"1280">
-<meta property='og:image:height' content:"680">
-<meta property='og:url' content='https://trashbots.github.io/tblocks' >
-<meta name="author" content="Paul Austin">
-<meta name="twitter:title" content="TBlocks ">
-<meta name="twitter:description" content=" TBlocks building workspace">
-<meta name="twitter:image" content=" https://trashbots.github.io/tblocks/images/TBlocksLinkImage.jpg">
-<meta name="twitter:card" content="summary_large_image">
-
+<!--
+<meta property="og:image:width" content:"1280">
+<meta property="og:image:height" content:"680">
+-->
 <!--link rel="apple-touch-startup-image" href="/launch.png"-->
 <html>
 <head>
