--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://trashbots.github.io/tblocks">
     <meta name="author" content="Paul Austin">
     <meta name="twitter:title" content="TBlocks ">
-    <meta name="twitter:description" content="TBlocks building workspace">
+    <meta name="twitter:description" content="TBlocks a playful workspace for programming, driving and recording trashbots.">
     <meta name="twitter:image" content="https://trashbots.github.io/tblocks/images/TBlocksLinkImage.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="icon" type="image/png" href="favicon.png">
